refactor(user): 重构用户模块代码
- 优化了用户注册、登录、注销等功能的实现- 新增了用户信息增删改查相关方法
- 改进了代码结构，提高了可读性和可维护性
- 增加了参数校验和异常处理，提升了代码健壮性